--- a/css/styles.css
+++ b/css/styles.css
@@ -11,3 +11,7 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a0d8ef', endColorstr='#feffff',GradientType=0 ); /* IE6-8 */
 
 }
+
+div {
+  max-width: 100%;
+}
